# rag-pipelines

./: README.md  main.py  pyproject.toml  requirements.txt
notebook/: document.ipynb
